hphp/hack/test/typecheck/attributes/attribute_class_naming_conflict.php
<?hh

class A {}

class __Attribute__A {}
